// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link prominence render prominence default 1`] = `
<DocumentFragment>
  .css-jzq3t2-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-jzq3t2-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-jzq3t2-StyledLink>* {
  pointer-events: none;
}

.css-jzq3t2-StyledLink:hover,
.css-jzq3t2-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.css-jzq3t2-StyledLink:hover .e1afnb7a2,
.css-jzq3t2-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-jzq3t2-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-jzq3t2-StyledLink:hover::after,
.css-jzq3t2-StyledLink:focus::after {
  background-color: #005da3;
}

.css-jzq3t2-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-jzq3t2-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
    prominence="default"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link prominence render prominence strong 1`] = `
<DocumentFragment>
  .css-1bhysvz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1bhysvz-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1bhysvz-StyledLink>* {
  pointer-events: none;
}

.css-1bhysvz-StyledLink:hover,
.css-1bhysvz-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #f9f9fa;
  text-decoration-color: #f9f9fa;
}

.css-1bhysvz-StyledLink:hover .e1afnb7a2,
.css-1bhysvz-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1bhysvz-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1bhysvz-StyledLink:hover::after,
.css-1bhysvz-StyledLink:focus::after {
  background-color: #005da3;
}

.css-1bhysvz-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1bhysvz-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
    prominence="strong"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link prominence render prominence stronger 1`] = `
<DocumentFragment>
  .css-1n90v43-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1n90v43-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1n90v43-StyledLink>* {
  pointer-events: none;
}

.css-1n90v43-StyledLink:hover,
.css-1n90v43-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.css-1n90v43-StyledLink:hover .e1afnb7a2,
.css-1n90v43-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1n90v43-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1n90v43-StyledLink:hover::after,
.css-1n90v43-StyledLink:focus::after {
  background-color: #005da3;
}

.css-1n90v43-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1n90v43-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
    prominence="stronger"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link prominence render prominence weak 1`] = `
<DocumentFragment>
  .css-jzq3t2-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-jzq3t2-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-jzq3t2-StyledLink>* {
  pointer-events: none;
}

.css-jzq3t2-StyledLink:hover,
.css-jzq3t2-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.css-jzq3t2-StyledLink:hover .e1afnb7a2,
.css-jzq3t2-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-jzq3t2-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-jzq3t2-StyledLink:hover::after,
.css-jzq3t2-StyledLink:focus::after {
  background-color: #005da3;
}

.css-jzq3t2-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-jzq3t2-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
    prominence="weak"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with bad sentiment 1`] = `
<DocumentFragment>
  .css-k0a54d-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-k0a54d-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-k0a54d-StyledLink>* {
  pointer-events: none;
}

.css-k0a54d-StyledLink:hover,
.css-k0a54d-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.css-k0a54d-StyledLink:hover .e1afnb7a2,
.css-k0a54d-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-k0a54d-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-k0a54d-StyledLink:hover::after,
.css-k0a54d-StyledLink:focus::after {
  background-color: #3f4250;
}

.css-k0a54d-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-k0a54d-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with href props 1`] = `
<DocumentFragment>
  .css-1erdb2u-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1erdb2u-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1erdb2u-StyledLink>* {
  pointer-events: none;
}

.css-1erdb2u-StyledLink:hover,
.css-1erdb2u-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.css-1erdb2u-StyledLink:hover .e1afnb7a2,
.css-1erdb2u-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1erdb2u-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1erdb2u-StyledLink:hover::after,
.css-1erdb2u-StyledLink:focus::after {
  background-color: #641cb3;
}

.css-1erdb2u-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1erdb2u-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with href props 2`] = `
<DocumentFragment>
  .css-1y94hd0-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1y94hd0-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1y94hd0-StyledLink>* {
  pointer-events: none;
}

.css-1y94hd0-StyledLink:hover,
.css-1y94hd0-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.css-1y94hd0-StyledLink:hover .e1afnb7a2,
.css-1y94hd0-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(4px, 0);
  -moz-transform: translate(4px, 0);
  -ms-transform: translate(4px, 0);
  transform: translate(4px, 0);
}

.css-1y94hd0-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1y94hd0-StyledLink:hover::after,
.css-1y94hd0-StyledLink:focus::after {
  background-color: #641cb3;
}

.css-1y94hd0-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-ur49ul-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-ur49ul-sizeStyles-StyledIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<a
    class="css-1y94hd0-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    <svg
      class="e1afnb7a2 css-ur49ul-sizeStyles-StyledIcon e1gt4cfo0"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M10.5303 4.21967C10.8232 4.51256 10.8232 4.98744 10.5303 5.28033L7.81066 8L10.5303 10.7197C10.8232 11.0126 10.8232 11.4874 10.5303 11.7803C10.2374 12.0732 9.76256 12.0732 9.46967 11.7803L6.21967 8.53033C5.92678 8.23744 5.92678 7.76256 6.21967 7.46967L9.46967 4.21967C9.76256 3.92678 10.2374 3.92678 10.5303 4.21967Z"
        fill-rule="evenodd"
      />
    </svg>
    Hello
  </a>
  .css-1erdb2u-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1erdb2u-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1erdb2u-StyledLink>* {
  pointer-events: none;
}

.css-1erdb2u-StyledLink:hover,
.css-1erdb2u-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.css-1erdb2u-StyledLink:hover .e1afnb7a2,
.css-1erdb2u-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1erdb2u-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1erdb2u-StyledLink:hover::after,
.css-1erdb2u-StyledLink:focus::after {
  background-color: #641cb3;
}

.css-1erdb2u-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-ur49ul-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-ur49ul-sizeStyles-StyledIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<a
    class="css-1erdb2u-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
    <svg
      class="e1afnb7a2 css-ur49ul-sizeStyles-StyledIcon e1gt4cfo0"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M6.21967 4.21967C6.51256 3.92678 6.98744 3.92678 7.28033 4.21967L10.5303 7.46967C10.8232 7.76256 10.8232 8.23744 10.5303 8.53033L7.28033 11.7803C6.98744 12.0732 6.51256 12.0732 6.21967 11.7803C5.92678 11.4874 5.92678 11.0126 6.21967 10.7197L8.93934 8L6.21967 5.28033C5.92678 4.98744 5.92678 4.51256 6.21967 4.21967Z"
        fill-rule="evenodd"
      />
    </svg>
  </a>
  .css-1erdb2u-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1erdb2u-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1erdb2u-StyledLink>* {
  pointer-events: none;
}

.css-1erdb2u-StyledLink:hover,
.css-1erdb2u-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.css-1erdb2u-StyledLink:hover .e1afnb7a2,
.css-1erdb2u-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1erdb2u-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1erdb2u-StyledLink:hover::after,
.css-1erdb2u-StyledLink:focus::after {
  background-color: #641cb3;
}

.css-1erdb2u-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.css-kfn912-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

.css-kfn912-sizeStyles-StyledIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<a
    class="css-1erdb2u-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="css-1tang38-StyledExternalIconContainer e1afnb7a1"
    >
      <svg
        class="e1afnb7a2 css-kfn912-sizeStyles-StyledIcon e1gt4cfo0"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.25 6.5C3.83579 6.5 3.5 6.83579 3.5 7.25V15.75C3.5 16.1642 3.83579 16.5 4.25 16.5H12.75C13.1642 16.5 13.5 16.1642 13.5 15.75V11.75C13.5 11.3358 13.8358 11 14.25 11C14.6642 11 15 11.3358 15 11.75V15.75C15 16.9926 13.9926 18 12.75 18H4.25C3.00736 18 2 16.9926 2 15.75V7.25C2 6.00736 3.00736 5 4.25 5H9.25C9.66421 5 10 5.33579 10 5.75C10 6.16421 9.66421 6.5 9.25 6.5H4.25Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M6.19385 13.7532C6.47175 14.0603 6.94603 14.0841 7.25319 13.8062L16.5 5.43999V8.25C16.5 8.66421 16.8358 9 17.25 9C17.6642 9 18 8.66421 18 8.25V3.75C18 3.33579 17.6642 3 17.25 3H12.75C12.3358 3 12 3.33579 12 3.75C12 4.16421 12.3358 4.5 12.75 4.5H15.3032L6.24682 12.6938C5.93966 12.9717 5.91595 13.446 6.19385 13.7532Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </a>
  .css-1y94hd0-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1y94hd0-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1y94hd0-StyledLink>* {
  pointer-events: none;
}

.css-1y94hd0-StyledLink:hover,
.css-1y94hd0-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.css-1y94hd0-StyledLink:hover .e1afnb7a2,
.css-1y94hd0-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(4px, 0);
  -moz-transform: translate(4px, 0);
  -ms-transform: translate(4px, 0);
  transform: translate(4px, 0);
}

.css-1y94hd0-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1y94hd0-StyledLink:hover::after,
.css-1y94hd0-StyledLink:focus::after {
  background-color: #641cb3;
}

.css-1y94hd0-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.css-kfn912-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

.css-kfn912-sizeStyles-StyledIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<a
    class="css-1y94hd0-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="css-1tang38-StyledExternalIconContainer e1afnb7a1"
    >
      <svg
        class="e1afnb7a2 css-kfn912-sizeStyles-StyledIcon e1gt4cfo0"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.25 6.5C3.83579 6.5 3.5 6.83579 3.5 7.25V15.75C3.5 16.1642 3.83579 16.5 4.25 16.5H12.75C13.1642 16.5 13.5 16.1642 13.5 15.75V11.75C13.5 11.3358 13.8358 11 14.25 11C14.6642 11 15 11.3358 15 11.75V15.75C15 16.9926 13.9926 18 12.75 18H4.25C3.00736 18 2 16.9926 2 15.75V7.25C2 6.00736 3.00736 5 4.25 5H9.25C9.66421 5 10 5.33579 10 5.75C10 6.16421 9.66421 6.5 9.25 6.5H4.25Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M6.19385 13.7532C6.47175 14.0603 6.94603 14.0841 7.25319 13.8062L16.5 5.43999V8.25C16.5 8.66421 16.8358 9 17.25 9C17.6642 9 18 8.66421 18 8.25V3.75C18 3.33579 17.6642 3 17.25 3H12.75C12.3358 3 12 3.33579 12 3.75C12 4.16421 12.3358 4.5 12.75 4.5H15.3032L6.24682 12.6938C5.93966 12.9717 5.91595 13.446 6.19385 13.7532Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with no sentiment 1`] = `
<DocumentFragment>
  .css-jzq3t2-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-jzq3t2-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-jzq3t2-StyledLink>* {
  pointer-events: none;
}

.css-jzq3t2-StyledLink:hover,
.css-jzq3t2-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.css-jzq3t2-StyledLink:hover .e1afnb7a2,
.css-jzq3t2-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-jzq3t2-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-jzq3t2-StyledLink:hover::after,
.css-jzq3t2-StyledLink:focus::after {
  background-color: #005da3;
}

.css-jzq3t2-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-jzq3t2-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with oneLine 1`] = `
<DocumentFragment>
  .css-u5ms8t-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-u5ms8t-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-u5ms8t-StyledLink>* {
  pointer-events: none;
}

.css-u5ms8t-StyledLink:hover,
.css-u5ms8t-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.css-u5ms8t-StyledLink:hover .e1afnb7a2,
.css-u5ms8t-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-u5ms8t-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-u5ms8t-StyledLink:hover::after,
.css-u5ms8t-StyledLink:focus::after {
  background-color: #005da3;
}

.css-u5ms8t-StyledLink:active {
  text-decoration-thickness: 2px;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 200px;"
  >
    <a
      class="css-u5ms8t-StyledLink e1afnb7a0"
      data-variant="standalone"
      href="/"
    >
      Hello this is a very long text that should be truncated
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link render correctly with sizes 1`] = `
<DocumentFragment>
  .css-jzq3t2-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-jzq3t2-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-jzq3t2-StyledLink>* {
  pointer-events: none;
}

.css-jzq3t2-StyledLink:hover,
.css-jzq3t2-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.css-jzq3t2-StyledLink:hover .e1afnb7a2,
.css-jzq3t2-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-jzq3t2-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-jzq3t2-StyledLink:hover::after,
.css-jzq3t2-StyledLink:focus::after {
  background-color: #005da3;
}

.css-jzq3t2-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-jzq3t2-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
  ,
  .css-j2fist-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-j2fist-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-j2fist-StyledLink>* {
  pointer-events: none;
}

.css-j2fist-StyledLink:hover,
.css-j2fist-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.css-j2fist-StyledLink:hover .e1afnb7a2,
.css-j2fist-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-j2fist-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-j2fist-StyledLink:hover::after,
.css-j2fist-StyledLink:focus::after {
  background-color: #005da3;
}

.css-j2fist-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-j2fist-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
  ,
</DocumentFragment>
`;

exports[`Link render correctly with target blank 1`] = `
<DocumentFragment>
  .css-1erdb2u-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1erdb2u-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1erdb2u-StyledLink>* {
  pointer-events: none;
}

.css-1erdb2u-StyledLink:hover,
.css-1erdb2u-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.css-1erdb2u-StyledLink:hover .e1afnb7a2,
.css-1erdb2u-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1erdb2u-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1erdb2u-StyledLink:hover::after,
.css-1erdb2u-StyledLink:focus::after {
  background-color: #641cb3;
}

.css-1erdb2u-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.css-kfn912-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

.css-kfn912-sizeStyles-StyledIcon .fillStroke {
  stroke: currentColor;
  fill: none;
}

<a
    class="css-1erdb2u-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="css-1tang38-StyledExternalIconContainer e1afnb7a1"
    >
      <svg
        class="e1afnb7a2 css-kfn912-sizeStyles-StyledIcon e1gt4cfo0"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.25 6.5C3.83579 6.5 3.5 6.83579 3.5 7.25V15.75C3.5 16.1642 3.83579 16.5 4.25 16.5H12.75C13.1642 16.5 13.5 16.1642 13.5 15.75V11.75C13.5 11.3358 13.8358 11 14.25 11C14.6642 11 15 11.3358 15 11.75V15.75C15 16.9926 13.9926 18 12.75 18H4.25C3.00736 18 2 16.9926 2 15.75V7.25C2 6.00736 3.00736 5 4.25 5H9.25C9.66421 5 10 5.33579 10 5.75C10 6.16421 9.66421 6.5 9.25 6.5H4.25Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M6.19385 13.7532C6.47175 14.0603 6.94603 14.0841 7.25319 13.8062L16.5 5.43999V8.25C16.5 8.66421 16.8358 9 17.25 9C17.6642 9 18 8.66421 18 8.25V3.75C18 3.33579 17.6642 3 17.25 3H12.75C12.3358 3 12 3.33579 12 3.75C12 4.16421 12.3358 4.5 12.75 4.5H15.3032L6.24682 12.6938C5.93966 12.9717 5.91595 13.446 6.19385 13.7532Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with variants props 1`] = `
<DocumentFragment>
  .css-1erdb2u-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1erdb2u-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1erdb2u-StyledLink>* {
  pointer-events: none;
}

.css-1erdb2u-StyledLink:hover,
.css-1erdb2u-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.css-1erdb2u-StyledLink:hover .e1afnb7a2,
.css-1erdb2u-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1erdb2u-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1erdb2u-StyledLink:hover::after,
.css-1erdb2u-StyledLink:focus::after {
  background-color: #641cb3;
}

.css-1erdb2u-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1erdb2u-StyledLink e1afnb7a0"
    data-variant="inline"
    href="/"
  >
    Hello
  </a>
  .css-1erdb2u-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1erdb2u-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1erdb2u-StyledLink>* {
  pointer-events: none;
}

.css-1erdb2u-StyledLink:hover,
.css-1erdb2u-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.css-1erdb2u-StyledLink:hover .e1afnb7a2,
.css-1erdb2u-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1erdb2u-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1erdb2u-StyledLink:hover::after,
.css-1erdb2u-StyledLink:focus::after {
  background-color: #641cb3;
}

.css-1erdb2u-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1erdb2u-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render danger 1`] = `
<DocumentFragment>
  .css-6kni59-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #b3144d;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-6kni59-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-6kni59-StyledLink>* {
  pointer-events: none;
}

.css-6kni59-StyledLink:hover,
.css-6kni59-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #92103f;
  text-decoration-color: #92103f;
}

.css-6kni59-StyledLink:hover .e1afnb7a2,
.css-6kni59-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-6kni59-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-6kni59-StyledLink:hover::after,
.css-6kni59-StyledLink:focus::after {
  background-color: #b3144d;
}

.css-6kni59-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-6kni59-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render info 1`] = `
<DocumentFragment>
  .css-jzq3t2-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-jzq3t2-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-jzq3t2-StyledLink>* {
  pointer-events: none;
}

.css-jzq3t2-StyledLink:hover,
.css-jzq3t2-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.css-jzq3t2-StyledLink:hover .e1afnb7a2,
.css-jzq3t2-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-jzq3t2-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-jzq3t2-StyledLink:hover::after,
.css-jzq3t2-StyledLink:focus::after {
  background-color: #005da3;
}

.css-jzq3t2-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-jzq3t2-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render neutral 1`] = `
<DocumentFragment>
  .css-k0a54d-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-k0a54d-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-k0a54d-StyledLink>* {
  pointer-events: none;
}

.css-k0a54d-StyledLink:hover,
.css-k0a54d-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.css-k0a54d-StyledLink:hover .e1afnb7a2,
.css-k0a54d-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-k0a54d-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-k0a54d-StyledLink:hover::after,
.css-k0a54d-StyledLink:focus::after {
  background-color: #3f4250;
}

.css-k0a54d-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-k0a54d-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render primary 1`] = `
<DocumentFragment>
  .css-1erdb2u-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1erdb2u-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1erdb2u-StyledLink>* {
  pointer-events: none;
}

.css-1erdb2u-StyledLink:hover,
.css-1erdb2u-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.css-1erdb2u-StyledLink:hover .e1afnb7a2,
.css-1erdb2u-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1erdb2u-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1erdb2u-StyledLink:hover::after,
.css-1erdb2u-StyledLink:focus::after {
  background-color: #641cb3;
}

.css-1erdb2u-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1erdb2u-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render secondary 1`] = `
<DocumentFragment>
  .css-6dylcc-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ac22e7;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-6dylcc-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-6dylcc-StyledLink>* {
  pointer-events: none;
}

.css-6dylcc-StyledLink:hover,
.css-6dylcc-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #8f1cc2;
  text-decoration-color: #8f1cc2;
}

.css-6dylcc-StyledLink:hover .e1afnb7a2,
.css-6dylcc-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-6dylcc-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-6dylcc-StyledLink:hover::after,
.css-6dylcc-StyledLink:focus::after {
  background-color: #ac22e7;
}

.css-6dylcc-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-6dylcc-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render success 1`] = `
<DocumentFragment>
  .css-19h48de-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #22674e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-19h48de-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-19h48de-StyledLink>* {
  pointer-events: none;
}

.css-19h48de-StyledLink:hover,
.css-19h48de-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1b533f;
  text-decoration-color: #1b533f;
}

.css-19h48de-StyledLink:hover .e1afnb7a2,
.css-19h48de-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-19h48de-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-19h48de-StyledLink:hover::after,
.css-19h48de-StyledLink:focus::after {
  background-color: #22674e;
}

.css-19h48de-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-19h48de-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link sentiment render warning 1`] = `
<DocumentFragment>
  .css-1hft7lf-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #7c5400;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1hft7lf-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1hft7lf-StyledLink>* {
  pointer-events: none;
}

.css-1hft7lf-StyledLink:hover,
.css-1hft7lf-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #664300;
  text-decoration-color: #664300;
}

.css-1hft7lf-StyledLink:hover .e1afnb7a2,
.css-1hft7lf-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1hft7lf-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.css-1hft7lf-StyledLink:hover::after,
.css-1hft7lf-StyledLink:focus::after {
  background-color: #7c5400;
}

.css-1hft7lf-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1hft7lf-StyledLink e1afnb7a0"
    data-variant="standalone"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;
